# resume

./: .envrc  .gitignore  .tool-versions  Makefile  archives.html  authors.html  categories.html  developercv.cls  en_data.py  index.html  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  resume.tex  tags.html  tasks.py  utils.py
data/: localize.py  resume.json
data/en/: resume.json
data/fr/: resume.json
en/: archives.html  authors.html  categories.html  index.html  tags.html
en/theme/css/: main.css
feeds/: all.atom.xml
fr/: archives.html  authors.html  categories.html  index.html  tags.html
fr/theme/css/: main.css
themes/resume/static/css/: add.css  main.css
themes/resume/templates/: base.html  index.html
themes/resume/templates/includes/: career-profile.html  education.html  experience.html  language.html  projects.html  sidebar.html  skills.html
