[tool.poetry]
name = "resume"
version = "0.1.0"
description = ""
authors = ["Matthieu Berthomé <matthieu@whisbee.eu>"]

[tool.poetry.dependencies]
python = "^3.9"
pelican = {version = "4.2.0", extras = ["Markdown"]}
invoke = "^1.6.0"
livereload = "^2.6.3"
ghp-import = "^2.0.2"
click = "^8.0.3"
jsondiff = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
